@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2400 2003/06/02 15:21:22 jmmv Exp $
+$NetBSD: CHANGES,v 1.2401 2003/06/02 19:55:53 abs Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2276,3 +2276,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated ap-throttle to 3.1.2nb1 [abs 2003-06-02]
 	Added vms-empire-1.4 [jmmv 2003-06-02]
 	Updated dircproxy to 1.0.5 [jmmv 2003-06-02]
+	Updated setiathome to 3.03nb2 [abs 2003-06-02]
